# limacina

./: .gitignore  README.md  pyproject.toml  run.py  wrangler.toml
app/: extensions.py
app/models/: __init__.py  circle.py  comment.py  event.py  media.py  post.py  role.py  user.py
app/routes/: __init__.py  admin.py  auth.py  circle.py  comment.py  event.py  main.py  notice.py  post.py  user.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/circle/: detail.html  edit.html  list.html  new_form.html
app/templates/errors/: 401.html  403.html  404.html  429.html
app/templates/event/: detail.html  list.html  new_form.html
app/templates/main/: index.html  privacy.html  search.html  terms.html
app/templates/notice/: list.html
app/templates/post/: detail.html  edit_form.html  form.html
app/templates/user/: edit_profile.html  profile.html
migrations/: 0001_init.sql
